# simply_dataviewer

./: README.rst  pyproject.toml  simply_dataviewer.spec
src/: app.py
